更新時の参照先Load処理パフォーマンス改善
・Loadしないことを可能にする